[package]
name = "quake_bspinfo"
description = "Extract Quake related information from .bsp files."
categories = ["parsing"]
keywords = ["bsp", "parser", "quake", "quakeworld"]
repository = "https://github.com/vikpe/bspparser"
authors = ["Viktor Persson"]
version = "0.4.0"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

[dependencies]
anyhow = "1.0.86"
bspparser = "0.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"

[dev-dependencies]
pretty_assertions = "1.4.0"
